hass/appdaemon/appdaemon-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appdaemon
  namespace: hass
spec:
  selector:
    matchLabels:
      app: appdaemon
  template:
    metadata:
      labels:
        app: appdaemon
    spec:
      containers:
      - name: appdaemon
        image: acockburn/appdaemon:4.4.2
        ports:
        - containerPort: 5050
          name: http
          protocol: TCP
        volumeMounts:
        - name: appdaemon-data
          mountPath: /conf
        resources:
          requests:
            memory: 50Mi
            cpu: "20m"
          limits:
            memory: 100Mi
      volumes:
      - name: appdaemon-data
        persistentVolumeClaim:
          claimName: appdaemon-pvc
